--- a/trunk1.00/nbproject/private/private.properties
+++ b/trunk1.00/nbproject/private/private.properties
@@ -1,5 +1,5 @@
-application.args=
-file.reference.Microsoft_SQL_Server_2000_Driver_for_JDBC-lib=D:\\Program Files\\Microsoft SQL Server 2000 Driver for JDBC\\lib
+application.args=-Xlint:deprecation
+file.reference.Microsoft_SQL_Server_2000_Driver_for_JDBC-lib=C:\\Program Files\\Microsoft SQL Server 2000 Driver for JDBC\\lib
 file.reference.mysql-connector-java-5.0.4-src=D:\\Projects\\Numismat\\src\\mysql-connector-java-5.0.4\\mysql-connector-java-5.0.4\\src
 javac.debug=true
 javadoc.preview=true
