--- a/trunk1.00/nbproject/project.properties
+++ b/trunk1.00/nbproject/project.properties
@@ -16,7 +16,6 @@ debug.test.classpath=\
 dist.dir=dist
 dist.jar=${dist.dir}/VGrabber.jar
 dist.javadoc.dir=${dist.dir}/javadoc
-file.reference.Microsoft_SQL_Server_2000_Driver_for_JDBC-lib=../../../../Program Files/Microsoft SQL Server 2000 Driver for JDBC/lib
 file.reference.mysql-connector-java-5.0.4-src=../../../Numismat/src/mysql-connector-java-5.0.4/mysql-connector-java-5.0.4/src
 jar.compress=false
 javac.classpath=\
@@ -59,5 +58,17 @@ run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
 src.dir=src
-src.lib.dir=${file.reference.Microsoft_SQL_Server_2000_Driver_for_JDBC-lib}
 test.src.dir=test
+
+#vxd section
+
+#configuration 
+config.dir=config
+dist.configr.dir=${dist.dir}/config
+dbobjects=${src.dir}/vgrabber/db/sql/dbobjects.sql
+config=${src.dir}/vgrabber/config/Config.properties
+
+#logging
+logs.dir=logs
+dist.logs.dir=${dist.dir}/logs
+logsconfig=${src.dir}/vgrabber/logger/logsconfig.properties
