--- a/trunk1.00/config/Config.properties
+++ b/trunk1.00/config/Config.properties
@@ -1,8 +1,7 @@
-# Sample ResourceBundle properties file
-
-ServerType=MSSQL
-ServerName=127.0.0.1
-DataBase=imobil5
-UserName=sa
+#VGrabber Configs
+#Tue Mar 13 11:03:06 EET 2007
 Password=as
-
+DataBase=imobil5
+ServerName=localhost
+UserName=sa
+ServerType=MSSQL
