--- a/trunk1.00/nbproject/project.properties
+++ b/trunk1.00/nbproject/project.properties
@@ -65,7 +65,8 @@ test.src.dir=test
 #configuration 
 config.dir=config
 dist.configr.dir=${dist.dir}/config
-dbobjects=${src.dir}/vgrabber/db/sql/dbobjects.sql
+mssqldbobjects=${src.dir}/vgrabber/db/sql/mssqldbobjects.sql
+mysqldbobjects=${src.dir}/vgrabber/db/sql/mysqldbobjects.sql
 config=${src.dir}/vgrabber/config/Config.properties
 
 #logging
