--- a/trunk1.00/nbproject/private/private.properties
+++ b/trunk1.00/nbproject/private/private.properties
@@ -3,4 +3,4 @@ file.reference.Microsoft_SQL_Server_2000_Driver_for_JDBC-lib=C:\\Program Files\\
 file.reference.mysql-connector-java-5.0.4-src=D:\\Projects\\Numismat\\src\\mysql-connector-java-5.0.4\\mysql-connector-java-5.0.4\\src
 javac.debug=true
 javadoc.preview=true
-user.properties.file=D:\\Documents and Settings\\vdoni.COMPUDAVA\\.netbeans\\5.0\\build.properties
+user.properties.file=C:\\Users\\vdoni\\.netbeans\\5.0\\build.properties
