--- a/trunk1.00/nbproject/project.properties
+++ b/trunk1.00/nbproject/project.properties
@@ -19,7 +19,7 @@ dist.javadoc.dir=${dist.dir}/javadoc
 file.reference.mysql-connector-java-5.0.4-src=../../../Numismat/src/mysql-connector-java-5.0.4/mysql-connector-java-5.0.4/src
 jar.compress=false
 javac.classpath=\
-    ${libs.MSSQL.classpath}
+    ${libs.mssql.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -40,9 +40,9 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-# Property libs.MSSQL.classpath is set here just to make sharing of project simpler.
+# Property libs.mssql.classpath is set here just to make sharing of project simpler.
 # The library definition has always preference over this property.
-libs.MSSQL.classpath=../../../../Program Files/Microsoft SQL Server 2000 Driver for JDBC/lib/msbase.jar;../../../../Program Files/Microsoft SQL Server 2000 Driver for JDBC/lib/mssqlserver.jar;../../../../Program Files/Microsoft SQL Server 2000 Driver for JDBC/lib/msutil.jar
+libs.mssql.classpath=../../tools/sqljdbc_2.0/enu/sqljdbc.jar;../../tools/sqljdbc_2.0/enu/sqljdbc4.jar
 main.class=vgrabber.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
