--- a/trunk1.00/nbproject/private/private.properties
+++ b/trunk1.00/nbproject/private/private.properties
@@ -3,4 +3,5 @@ file.reference.Microsoft_SQL_Server_2000_Driver_for_JDBC-lib=C:\\Program Files\\
 file.reference.mysql-connector-java-5.0.4-src=D:\\Projects\\Numismat\\src\\mysql-connector-java-5.0.4\\mysql-connector-java-5.0.4\\src
 javac.debug=true
 javadoc.preview=true
-user.properties.file=C:\\Users\\vdoni\\.netbeans\\5.0\\build.properties
+jaxws.endorsed.dir=C:\\Program Files\\netbeans-5.5.1\\ide7\\modules\\ext\\jaxws21\\api
+user.properties.file=C:\\Users\\vdoni\\.netbeans\\5.5.1\\build.properties
